--- a/src/Style/scrollbar.css
+++ b/src/Style/scrollbar.css
@@ -5,12 +5,13 @@
 .plain::-webkit-scrollbar-track {
   /* -webkit-box-shadow: inset 0 0 6px #66bfbf; */
   /* box-shadow: inset 0 0 6px #66bfbf; */
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
 }
 
 .plain::-webkit-scrollbar {
-  width: 6px;
-  background-color: #f5f5f5;
+  width: 4px;
+  border-radius: 10px;
+  /* background-color: #f5f5f5; */
 }
 
 .plain::-webkit-scrollbar-thumb {
